--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next-auth": "^4.24.7",
     "@auth/prisma-adapter": "^2.4.0",
     "@tanstack/react-query": "^5.56.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "@heroicons/react": "^2.1.5"
   },
   "devDependencies": {
     "typescript": "^5.5.0",
