--- a/package.json
+++ b/package.json
@@ -14,27 +14,27 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.4.0",
+    "@heroicons/react": "^2.1.5",
+    "@prisma/client": "^5.19.0",
+    "@tanstack/react-query": "^5.56.0",
+    "aos": "^2.3.4",
     "next": "^14.2.0",
+    "next-auth": "^4.24.7",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "@prisma/client": "^5.19.0",
-    "next-auth": "^4.24.7",
-    "@auth/prisma-adapter": "^2.4.0",
-    "@tanstack/react-query": "^5.56.0",
-    "zod": "^3.23.8",
-    "@heroicons/react": "^2.1.5"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5.5.0",
     "@types/node": "^20.14.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.6",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.0",
-    "prisma": "^5.19.0"
+    "postcss": "^8.4.39",
+    "prisma": "^5.19.0",
+    "tailwindcss": "^3.4.6",
+    "typescript": "^5.5.0"
   }
 }
-
