--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "aos": "^2.3.4",
     "next": "^14.2.0",
     "next-auth": "^4.24.7",
-    "nodemailer": "^7.0.13",
+    "nodemailer": "^7.0.7",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "xlsx": "^0.18.5",
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.15.2",
     "@types/node": "^20.14.0",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
